Apply automated "combine declaration with initialization" refactoring